--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </head>
 <body class="blue-gradient" data-spy="scroll" onload="firstScript()">
 
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow" id="scroll-nav">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow pb-3" id="scroll-nav">
             <a class="navbar-brand ml-md-5" href="#">
                 <img src="assets/img/logo-ico.png" alt="logo" width="100" height="50" class="d-inline-block align-top" loading="lazy">
             </a>
             <button class="navbar-toggler" id="toggle-button" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button> <!--pengatur toggle nya-->
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse mt-2 " id="navbarNav">
                 <form class="form-inline my-2 my-lg-0 ml-md-5">
                     <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search">
                             <button class="btn rounded-circle my-2 my-sm-0" type="submit">
                                 <i class="fas fa-search text-black-50"></i>
                             </button>
                 </form>
-                <ul class="navbar-nav mx-auto mt-2">
+                <ul class="navbar-nav mx-auto">
                     <li class="nav-item mx-2 active">
                         <a class="nav-link link  text-primary active" href="index.html">Home </a>
                     </li>
@@ -87,7 +87,7 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-4 col-sm-6 shadow-sm text-center">
-                                <h1 class=" text-capitalize">Home Smart</h1>
+                                <h1 class=" text-capitalize text-primary">Home Smart</h1>
                             </div>
                             <div class="col-md-8 col-sm-6 px-2">
                                 <div class="embed-responsive embed-responsive-16by9">
@@ -99,7 +99,7 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-4 col-sm-6 shadow-sm text-center ">
-                                <h1 class=" text-capitalize">Elctricity</h1>
+                                <h1 class=" text-capitalize text-primary">Elctricity</h1>
                             </div>
                             <div class="col-md-8 col-sm-6 px-2">
                                 <div class="embed-responsive embed-responsive-16by9">
@@ -299,7 +299,7 @@
             <a href="#" class="text-decoration-none">JOIN</a>-->
         </div>
     </div>
-    <div class="container-fluid bg-dark text-white pt-5">
+    <div class="container-fluid bg-bluetray text-white pt-5">
         <div class="container">
             <div  class="row footer border-bottom">
                 <div class="col-md-3 col-sm-12">
