--- a/self.html
+++ b/self.html
@@ -88,7 +88,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-7 col-sm-12 carousel slide ml-n1  " id="slider" data-ride="carousel">
+            <div class="col-md-7 col-sm-12 carousel slide ml-n1  banner-carousel" id="slider" data-ride="carousel">
                 <div class="carousel-inner ">
                     <ol class="carousel-indicators">
                         <li data-target="#slider" data-slide-to="0" class="active"></li>
@@ -110,12 +110,12 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <div class="col-md-5 col-sm-12">
+            <div class="col-md-5 col-sm-12 banner-kanan">
                 <div class="row pb-2 ">
-                    <img src="assets/img/SmartTechnology.jpg" class="card-img-top img-card" alt="..." height="200" width="200">
+                    <img src="assets/img/SmartTechnology.jpg" class="card-img-top img-card" alt="...">
                 </div>
                 <div class="row">
-                    <img src="assets/img/homesecurity.jpg" class="card-img-top img-card" alt="..." height="200" width="200">
+                    <img src="assets/img/homesecurity.jpg" class="card-img-top img-card" alt="...">
                 </div>
             </div>
         </div>
@@ -135,99 +135,87 @@
                 </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-4 pt-5 ">
-                                    <div class="card h-100 bg-whitefor shadow mb-5">
-                                        <a href="lixy3.html">
-                                            <img src="assets/img/watch 3.jpg" class="card-img-top img-card"  height="300px" alt="...">
-                                        </a>
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center text-uppercase  py-2 rounded">Lixy 3</h5>
-                                            <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
-                                            <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="lixy3.html">More..</a></p>
+                            <div class="card-group">
+                                <div class="card h-100 bg-whitefor shadow mb-5">
+                                    <a href="lixy3.html">
+                                        <img src="assets/img/watch 3.jpg" class="card-img-top img-card"  height="300px" alt="...">
+                                    </a>
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center text-uppercase  py-2 rounded">Lixy 3</h5>
+                                        <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
+                                        <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="lixy3.html">More..</a></p>
+                                        <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
+                                            <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
+                                            <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card h-100 bg-whitefor shadow mb-5">
+                                    <img src="assets/img/simpli.jpeg" class="card-img-top img-card"  height="300px" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center text-uppercase w-100 py-2 rounded">Simpli</h5>
+                                        <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
+                                            <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
                                             <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
                                                 <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
                                                 <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
                                             </div>
-                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 col-sm-4 pt-5 ">
-                                    <div class="card h-100 bg-whitefor shadow mb-5">
-                                        <img src="assets/img/simpli.jpeg" class="card-img-top img-card"  height="300px" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center text-uppercase w-100 py-2 rounded">Simpli</h5>
-                                            <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
-                                                <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
-                                                <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
-                                                    <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
-                                                    <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
-                                                </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 col-sm-4 pt-5 ">
-                                    <div class="card h-100 bg-whitefor shadow mb-5">
-                                        <img src="assets/img/watch 2.jpeg" class="card-img-top img-card" height="300px" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center text-uppercase w-100 py-2 rounded">Lixy 2</h5>
-                                            <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
-                                                <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
-                                                <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
-                                                    <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
-                                                    <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
-                                                </div>
-                                        </div>
+                                <div class="card h-100 bg-whitefor shadow mb-5">
+                                    <img src="assets/img/watch 2.jpeg" class="card-img-top img-card" height="300px" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center text-uppercase w-100 py-2 rounded">Lixy 2</h5>
+                                        <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
+                                            <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
+                                            <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
+                                                <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
+                                                <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
+                                            </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="row">
-                                <div class="col pt-5 ">
-                                    <div class="card h-100 bg-whitefor shadow mb-5">
-                                        <img src="assets/img/watch 1.jpeg" class="card-img-top img-card" height="300px" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center text-uppercase w-100 py-2 rounded">Lixy 1</h5>
+                            <div class="card-group">
+                                <div class="card h-100 bg-whitefor shadow mb-5">
+                                    <img src="assets/img/watch 1.jpeg" class="card-img-top img-card" height="300px" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center text-uppercase w-100 py-2 rounded">Lixy 1</h5>
+                                        <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
+                                        <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
+                                        <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
+                                            <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
+                                            <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card h-100 bg-whitefor shadow mb-5">
+                                    <a href="#">
+                                        <img src="assets/img/analog-watch.jpg" class="card-img-top img-card"  height="300px" alt="...">
+                                    </a>
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center text-uppercase py-2 rounded">Logh</h5>
                                             <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
                                             <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
                                             <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
                                                 <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
                                                 <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
                                             </div>
-                                        </div>
                                     </div>
                                 </div>
-                                <div class="col pt-5 ">
-                                    <div class="card h-100 bg-whitefor shadow mb-5">
-                                        <a href="#">
-                                            <img src="assets/img/analog-watch.jpg" class="card-img-top img-card"  height="300px" alt="...">
-                                        </a>
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center text-uppercase py-2 rounded">Logh</h5>
-                                                <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
-                                                <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
-                                                <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
-                                                    <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
-                                                    <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
-                                                </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col pt-5 ">
-                                    <div class="card h-100 bg-whitefor shadow mb-5">
-                                        <a href="#">
-                                            <img src="assets/img/watch 3.jpg" class="card-img-top img-card"  height="300px" alt="...">
-                                        </a>
-                                        <div class="card-body">
-                                            <h5 class="card-title text-center text-uppercase py-2 rounded">Lixy 3</h5>
-                                                <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
-                                                <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
-                                                <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
-                                                    <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
-                                                    <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
-                                                </div>
-                                        </div>
+                                <div class="card h-100 bg-whitefor shadow mb-5">
+                                    <a href="#">
+                                        <img src="assets/img/watch 3.jpg" class="card-img-top img-card"  height="300px" alt="...">
+                                    </a>
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center text-uppercase py-2 rounded">Lixy 3</h5>
+                                            <p class="card-text text-left mx-n2">Features : <br>- Track System Lebih akurat<br>- Voice system on call<br>- Record perjalanan jejak  </p>
+                                            <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you. <a href="#">More..</a></p>
+                                            <div class="d-flex flex-wrap align-content-between justify-content-between mx-auto  mt-5">
+                                                <a class="btn btn-outline-primary px-4 rounded-pill" href="#" role="button">Buy</a>
+                                                <a class="btn btn-danger  rounded-pill" href="#" role="button"><i class="fas fa-shopping-cart"></i>  Keranjang</a>
+                                            </div>
                                     </div>
                                 </div>
                             </div>
