menambah banyak feature

--- a/about.html
+++ b/about.html
@@ -4,10 +4,9 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="assets/css/style.css" rel="stylesheet">
+        <link href="assets/css/about.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap" rel="stylesheet">
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
         <script src="https://kit.fontawesome.com/c7aacba508.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -91,37 +90,42 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-12 ">
-                    <p class="title-me display-4">Make Your Family, Happines Everyday</p>
-                    <p class="lead mt-5">Lindir Always Beside You, Always Protect you, Make You and Your Family Happy Everyday</p>
-                </div>
-                <div class="col-lg-7 col-sm-12">
-                    <img src="assets/img/Happy.jpg" class="img-fluid" alt="Responsive image">
+        <section class="introduce-contain">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-sm-12 ">
+                        <p class="title-me">Make Your Family, Happines Everyday</p>
+                        <p class="lead text-center text-capitalize">Lindir Always Beside You, Always Protect you, Make You and Your Family Happy Everyday</p>
+                    </div>
+                    <div class="col-lg-7 col-sm-12">
+                        <img src="assets/img/Happy.jpg" class="img-fluid" alt="Responsive image">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
+        
         <section class="vision-contain bg-lightblue  my-5 py-5">
-          <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-4">
-                    <div class="container-visi text text-center text-capitalize">
-                        <p>
-                            To create a more comfortable and calm daily life for many people
-                        </p>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-4">
+                        <div class="container-visi text text-center text-capitalize">
+                            <p>
+                                Menjadi mahasiswa yang berpestrasi dalam bidang akademik dan non akademik dengan berjiwa disiplin di PENS.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <h1 class="text-center">VISI    MISI</h1>
-                </div>
-                <div class="col-md-4">
-                    <div class="container-misi text text-center text-capitalize">
-                        <p>kami selalu mengutamakann apa yang ingin kami capai</p>
+                    <div class="col-md-4">
+                        <h1 class="text-center">VISI    MISI</h1>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="container-misi text text-left text-capitalize">
+                            <p>1. Aktif dalam kegiatan perkuliahan.</p>
+                            <p>2. Mengasah keahlian melalui UKM yang ada di PENS.</p>
+                            <p>3. Mewujudkan pribadi mahasiswa yang teratur.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
         
         <section class="leader-contain my-5">
@@ -131,29 +135,65 @@
                     <h1>Leader</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <figure class="figure">
-                      <img src="assets/img/leader.jpg" class="figure-img img-fluid " alt="leader-1">
-                    </figure>
-                </div>
-                <div class="col-md-8 d-flex align-self-center">
-                  <blockquote class="blockquote text-center">
-                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                  </blockquote>
+            <div  id="leader" class="carousel slide carousel-fade row" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-touch="false">
+                        <div class="row">
+                            <div class="col-md-4 ">
+                                <figure class="figure">
+                                    <img src="assets/img/leader.jpg" class="figure-img img-fluid my-img rounded" alt="leader-1">
+                                </figure>
+                            </div>
+                            <div class="col-md-8 d-flex align-self-center">
+                                <blockquote class="blockquote text-center">
+                                    <p class="mb-0">" Melangkah kedepan raih keinginan mundur ke belakang mulai membenahi "</p>
+                                    <footer class="blockquote-footer">Zulqhi Fahri Muda <cite title="Source Title">CEO</cite></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item " data-touch="false">
+                        <div class="row">
+                            <div class="col-md-4 ">
+                                <figure class="figure">
+                                    <img src="assets/img/homesecurity.jpg" class="figure-img img-fluid my-img rounded" alt="leader-1">
+                                </figure>
+                            </div>
+                            <div class="col-md-8 d-flex align-self-center">
+                                <blockquote class="blockquote text-center h-100 ">
+                                    <p class="mb-0">" One Heart Satu Hati Menuju Masa Depan yang Baik dan menghadap depan "</p>
+                                    <footer class="blockquote-footer">Rahmat Syah <cite title="Source Title">CTO</cite></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-touch="false">
+                        <div class="row">
+                            <div class="col-md-4 ">
+                                <figure class="figure">
+                                    <img src="assets/img/leader 2.jpg" class="figure-img img-fluid my-img rounded" alt="leader-2">
+                                </figure>
+                            </div>
+                            <div class="col-md-8 d-flex align-self-center">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-0">" Melangkah kedepan raih keinginan mundur ke belakang mulai membenahi "</p>
+                                <footer class="blockquote-footer">Zulqhi Fahri Muda <cite title="Source Title">CEO</cite></footer>
+                            </blockquote>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center figure-down">
                     <figure class="figure">
-                      <img src="assets/img/watch 1.jpeg" class="figure-img rounded-circle img-fluid" alt="leader-1">
+                        <a data-target="#leader" data-slide-to="2"><img src="assets/img/leader 2.jpg" class="figure-img rounded-circle img-fluid" alt="leader-1"></a>
                     </figure>
                     <figure class="figure">
-                        <img src="assets/img/leader.jpg" class="figure-img rounded-circle img-fluid image-utama" alt="Leader-2">
+                        <a data-target="#leader" data-slide-to="0" class="active"><img src="assets/img/leader.jpg" class="figure-img rounded-circle img-fluid image-utama" alt="Leader-2"></a>
                     </figure>
                     <figure class="figure">
-                      <img src="assets/img/watch 1.jpeg" class="figure-img rounded-circle img-fluid" alt="leader-3">
+                        <a data-target="#leader" data-slide-to="1"><img src="assets/img/watch 1.jpeg" class="figure-img rounded-circle img-fluid" alt="leader-3"></a>
                     </figure>
                 </div>
             </div>
